some styling changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,41 @@
 
   <body>
     <main>
-      
+      <nav class="top-nav-bar">
+      </nav>
+      <section class="hero">
+
+        <header>
+
+          <h1>Create your new website <br>for free</h1>
+
+          <h2>WordPress.com is the best place for your <br>
+            personal blog or business site</h2>
+        </header>
+
+        <div class="create-website">
+          Create Website
+        </div>
+
+        <img class="arrow"src="" alt="" />
+
+        <div class="mobile">
+          <img class="mobile-icon" src="" alt="" />
+          Ready for mobile <br> Download the iOS or Android app
+        </div>
+
+        <div class="freshly-pressed">
+          <img class="fresh-press-icon" src="" alt="" />
+          Freshly Pressed <br> Strong voices from around the world
+        </div>
+
+        <div class="designs">
+          <img class="design-icon" src="" alt="" />
+          Hundreds of designs <br> Find your unique style
+        </div>
+
+      </section>
+
     </main>
 
   </body>
