--- a/index.html
+++ b/index.html
@@ -22,24 +22,24 @@
         </header>
 
         <div class="create-website">
-          Create Website
+          <a href="#">Create Website</a>
         </div>
 
-        <img class="arrow"src="" alt="" />
+        <div class="arrow"></div>
 
         <div class="mobile">
-          <img class="mobile-icon" src="" alt="" />
-          Ready for mobile <br> Download the iOS or Android app
+          <!-- <img class="mobile-icon" src="" alt="" /> -->
+          <!-- Ready for mobile <br> Download the iOS or Android app -->
         </div>
 
         <div class="freshly-pressed">
-          <img class="fresh-press-icon" src="" alt="" />
-          Freshly Pressed <br> Strong voices from around the world
+          <!-- <img class="fresh-press-icon" src="" alt="" /> -->
+          <!-- Freshly Pressed <br> Strong voices from around the world -->
         </div>
 
         <div class="designs">
-          <img class="design-icon" src="" alt="" />
-          Hundreds of designs <br> Find your unique style
+          <!-- <img class="design-icon" src="" alt="" /> -->
+          <!-- Hundreds of designs <br> Find your unique style -->
         </div>
 
       </section>
