some more styling before I call it a day

--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>assignment 2</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" charset="utf-8">
-    <link rel="stylesheet" href="styles/main.css" title="main stylesheet" charset="utf-8">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>assignment 2</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" charset="utf-8">
+  <link rel="stylesheet" href="styles/main.css" title="main stylesheet" charset="utf-8">
+</head>
 
-  <body>
-    <main>
-      <nav class="top-nav-bar">
-      </nav>
-      <section class="hero">
+<body>
+  <main>
+    
+    <nav class="top-nav-bar">
+    </nav>
 
-        <header>
+    <section class="hero">
+      <header>
+        <h1>Create your new website <br>for free</h1>
 
-          <h1>Create your new website <br>for free</h1>
-
-          <h2>WordPress.com is the best place for your <br>
-            personal blog or business site</h2>
+        <h2>WordPress.com is the best place for your <br>
+          personal blog or business site</h2>
         </header>
 
         <div class="create-website">
@@ -41,10 +41,46 @@
           <!-- <img class="design-icon" src="" alt="" /> -->
           <!-- Hundreds of designs <br> Find your unique style -->
         </div>
-
       </section>
+
+      <div class="transition">
+        <p>
+
+        </p>
+      </div>
+
+      <section class="features">
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+      </section>
+      <footer class="footer">
+        <div class="create-website">
+          <a href="#">Create Website</a>
+        </div>
+      </footer>
+      <nav>
+        <ul>
+          <li>Apps</li>
+          <li>Themes</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>VIP</li>
+          <li>Discover</li>
+          <li>About Us</li>
+          <br>
+          <li>Terms of Service</li>
+          <li>Privacy</li>
+          <li>Language</li>
+        </ul>
+        <div class="automatic">
+
+        </div>
+      </nav>
 
     </main>
 
   </body>
-</html>
+  </html>
