--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 </head>
 
 <body>
-  <main>
-    
-    <nav class="top-nav-bar">
-    </nav>
+  <nav class="top-nav-bar"></nav>
 
+  <main>
     <section class="hero">
       <header>
         <h1>Create your new website <br>for free</h1>
@@ -21,26 +19,30 @@
           personal blog or business site</h2>
         </header>
 
-        <div class="create-website">
+        <div class="create-website border">
           <a href="#">Create Website</a>
         </div>
 
         <div class="arrow"></div>
 
-        <div class="mobile">
-          <!-- <img class="mobile-icon" src="" alt="" /> -->
-          <!-- Ready for mobile <br> Download the iOS or Android app -->
-        </div>
+        <section class="feature">
 
-        <div class="freshly-pressed">
-          <!-- <img class="fresh-press-icon" src="" alt="" /> -->
-          <!-- Freshly Pressed <br> Strong voices from around the world -->
-        </div>
+          <div class="mobile">
+            <!-- <img class="mobile-icon" src="" alt="" /> -->
+            <!-- Ready for mobile <br> Download the iOS or Android app -->
+          </div>
 
-        <div class="designs">
-          <!-- <img class="design-icon" src="" alt="" /> -->
-          <!-- Hundreds of designs <br> Find your unique style -->
-        </div>
+          <div class="freshly-pressed">
+            <!-- <img class="fresh-press-icon" src="" alt="" /> -->
+            <!-- Freshly Pressed <br> Strong voices from around the world -->
+          </div>
+
+          <div class="designs">
+            <!-- <img class="design-icon" src="" alt="" /> -->
+            <!-- Hundreds of designs <br> Find your unique style -->
+          </div>
+        </section>
+
       </section>
 
       <div class="transition">
@@ -50,18 +52,21 @@
       </div>
 
       <section class="features">
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+
+        <article class="feature"></article>
+        <article class="feature"></article>
+        <article class="feature"></article>
+        <article class="feature"></article>
+        <article class="feature"></article>
+        <article class="feature"></article>
       </section>
+
       <footer class="footer">
         <div class="create-website">
           <a href="#">Create Website</a>
         </div>
       </footer>
-      <nav>
+      <nav class="bottom-nav">
         <ul>
           <li>Apps</li>
           <li>Themes</li>
