hero image added

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
   <main>
     <section class="hero">
+      <!-- <img class="crowd" src="assets/crowd.jpg" alt="big crowd" /> -->
       <header>
         <h1>Create your new website <br>for free</h1>
 
-        <h2>WordPress.com is the best place for your <br>
-          personal blog or business site</h2>
+           personal blog or business site</h2>
         </header>
 
         <div class="create-website border">
@@ -51,7 +51,7 @@
         </p>
       </div>
 
-      <section class="features">
+      <section class="features main">
 
         <article class="feature"></article>
         <article class="feature"></article>
@@ -61,31 +61,31 @@
         <article class="feature"></article>
       </section>
 
-      <footer class="footer">
-        <div class="create-website">
-          <a href="#">Create Website</a>
-        </div>
-      </footer>
-      <nav class="bottom-nav">
-        <ul>
-          <li>Apps</li>
-          <li>Themes</li>
-          <li>Support</li>
-          <li>Blog</li>
-          <li>VIP</li>
-          <li>Discover</li>
-          <li>About Us</li>
-          <br>
-          <li>Terms of Service</li>
-          <li>Privacy</li>
-          <li>Language</li>
-        </ul>
-        <div class="automatic">
-
-        </div>
-      </nav>
 
     </main>
+
+    <article class="footer">
+      <div class="create-website">
+        <a href="#">Create Website</a>
+      </div>
+    </article>
+
+    <footer class="main">
+      <nav class="bottom-nav">
+
+      <a href="Apps"></a>
+      <a href="Themes"></a>
+      <a href="Support"></a>
+      <a href="Blog"></a>
+      <a href="VIP"></a>
+      <a href="Discover"></a>
+      <a href="About Us"></a>
+      </nav>
+
+      <h4>Automattic</h4>
+
+    </footer>
+
 
   </body>
   </html>
