some more images

--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 <head>
   <meta charset="utf-8">
   <title>assignment 2</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" charset="utf-8">
   <link rel="stylesheet" href="styles/main.css" title="main stylesheet" charset="utf-8">
 </head>
 
 <body>
-  <nav class="top-nav-bar"></nav>
+  <nav class="top-nav-bar">
+
+    <img src="assets/logo.png" alt="WordPress.com" />
+      <nav>
+        WordPress.com
+      </nav>
+  </nav>
 
   <main>
     <section class="hero">
@@ -16,7 +23,8 @@
       <header>
         <h1>Create your new website <br>for free</h1>
 
-           personal blog or business site</h2>
+           <h2>WordPress.com is the best place for <br>your
+             personal blog or business site</h2>
         </header>
 
         <div class="create-website border">
@@ -47,6 +55,9 @@
 
       <div class="transition">
         <p>
+          WordPress.com is the easiest way to create
+          a free website or blog. It's a powerful
+          hosting platform that grows with you.
 
         </p>
       </div>
